[build-system]
requires = ["setuptools"]

[project]
name = "cbpyjsonrpc"
description = "json-rpc server clinet"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2024.8.15"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

